Made on user-device connection

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.2",
+    "mongodb": "^2.2.27",
     "socket.io": "^2.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
